--- a/adonis/package.json
+++ b/adonis/package.json
@@ -35,7 +35,9 @@
     "react-dom": "^16.2.0",
     "sqlite3": "^4.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "slugify": "^1.2.9"
+  },
   "autoload": {
     "App": "./app"
   }
